[gd_scene load_steps=9 format=3 uid="uid://biebc6r1spt82"]

[ext_resource type="Script" path="res://Scripts/event_manager_not_ingame.gd" id="1_vywad"]
[ext_resource type="PackedScene" uid="uid://cyhm0oobhtnbi" path="res://Scripts/_command_module.tscn" id="2_5gxj8"]
[ext_resource type="PackedScene" uid="uid://chfw26lb6taau" path="res://Scripts/_probability_module.tscn" id="3_q1j43"]
[ext_resource type="Script" path="res://Scripts/conditions_components.gd" id="3_r1le8"]
[ext_resource type="Script" path="res://Scripts/viewing.gd" id="5_ppsfg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tdps8"]
bg_color = Color(0.442911, 0.442911, 0.442911, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a178w"]
bg_color = Color(0.868985, 0.868985, 0.868985, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o4u1n"]
bg_color = Color(0.592077, 0.61975, 0.460177, 1)

[node name="EventManagerNotIngame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vywad")

[node name="Panel_MainBColor" type="Panel" parent="."]
modulate = Color(0.47788, 0.47788, 0.47788, 1)
layout_mode = 0
offset_left = 3.0
offset_top = -9.0
offset_right = 1918.0
offset_bottom = 1077.0

[node name="Panel_CodePreviewBColor" type="Panel" parent="."]
visibility_layer = 512
layout_mode = 0
offset_left = 40.0
offset_top = 96.0
offset_right = 889.0
offset_bottom = 1018.0

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1864.0
offset_top = -2.0
offset_right = 1909.0
offset_bottom = 29.0
text = "Back"

[node name="ScrollContainer_CodePreview" type="ScrollContainer" parent="."]
visible = false
z_index = 1
layout_mode = 0
offset_left = 37.0
offset_top = 109.0
offset_right = 883.0
offset_bottom = 482.0

[node name="VScrollBar_CodePreview" type="VBoxContainer" parent="ScrollContainer_CodePreview"]
z_index = 2
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer_CodePreview/VScrollBar_CodePreview"]
z_index = 3
custom_minimum_size = Vector2(800, 30)
layout_mode = 2
autowrap_mode = 1

[node name="Label_EventManager" type="Label" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 4.0
offset_right = 347.0
offset_bottom = 68.0
theme_override_colors/font_color = Color(1, 1, 1, 0.956863)
theme_override_font_sizes/font_size = 46
text = "Event Manager"

[node name="Label_id" type="Label" parent="."]
layout_mode = 0
offset_left = 1757.0
offset_top = 28.0
offset_right = 1903.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(1, 1, 1, 0.956863)
theme_override_font_sizes/font_size = 25
text = "ID: <VALUE>"

[node name="Label_name" type="Label" parent="."]
layout_mode = 0
offset_left = 928.0
offset_top = 22.0
offset_right = 1074.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(1, 1, 1, 0.956863)
theme_override_font_sizes/font_size = 25
text = "Name:
"

[node name="LineEdit" type="LineEdit" parent="Label_name"]
layout_mode = 0
offset_left = 165.0
offset_top = 5.0
offset_right = 703.0
offset_bottom = 36.0
theme_override_colors/caret_color = Color(1, 1, 1, 1)

[node name="CheckButton_Repeatable" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 1769.0
offset_top = 95.0
offset_right = 1905.0
offset_bottom = 126.0
tooltip_text = "Allows event to be repeat again if its already been trigger"
text = "Repeatable"

[node name="CheckButton_Active" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 1769.0
offset_top = 68.0
offset_right = 1905.0
offset_bottom = 99.0
tooltip_text = "Allows event to be trigger on start randomly"
text = "Active"

[node name="Label_description" type="Label" parent="."]
layout_mode = 0
offset_left = 928.0
offset_top = 61.0
offset_right = 1074.0
offset_bottom = 103.0
theme_override_colors/font_color = Color(1, 1, 1, 0.956863)
theme_override_font_sizes/font_size = 25
text = "Description: 
"

[node name="TextEdit" type="TextEdit" parent="Label_description"]
layout_mode = 0
offset_left = 164.0
offset_top = 3.0
offset_right = 701.0
offset_bottom = 185.0

[node name="Button_AddEvent" type="Button" parent="."]
layout_mode = 0
offset_left = 1674.0
offset_top = 994.0
offset_right = 1903.0
offset_bottom = 1066.0
text = "ADD EVENT"

[node name="Button_Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 1403.0
offset_top = 993.0
offset_right = 1632.0
offset_bottom = 1065.0
text = "CLEAR"

[node name="Create_ChoiceButton" type="Panel" parent="."]
layout_mode = 0
offset_left = 923.0
offset_top = 249.0
offset_right = 1837.0
offset_bottom = 584.0

[node name="Button_AddChoiceButton" type="Button" parent="Create_ChoiceButton"]
layout_mode = 0
offset_left = 15.0
offset_top = 12.0
offset_right = 196.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_tdps8")
theme_override_styles/normal = SubResource("StyleBoxFlat_a178w")
text = "Add ChoiceButton
"

[node name="ButtonScroll_Container" type="ScrollContainer" parent="Create_ChoiceButton"]
layout_mode = 0
offset_left = 11.0
offset_top = 61.0
offset_right = 895.0
offset_bottom = 309.0

[node name="VBoxContainer_CreateButtonModule" type="VBoxContainer" parent="Create_ChoiceButton/ButtonScroll_Container"]
layout_mode = 2

[node name="Button_AddChoiceButton2" type="Button" parent="Create_ChoiceButton"]
layout_mode = 0
offset_left = 767.0
offset_top = 14.0
offset_right = 901.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_tdps8")
theme_override_styles/normal = SubResource("StyleBoxFlat_a178w")
text = "Clear Choice

"

[node name="Label2" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 65.0
offset_top = 554.0
offset_right = 715.0
offset_bottom = 1027.0
theme_override_font_sizes/font_size = 10
text = "Commands

@ADD_MATERIALS - add value to the resources
eg @ADD_MATERIALS SPAREPARTS 10

@RELATIONSHIP_INCREASE - Add relationship of crew base on
float numbers of 0.0 > 1.0 
@RELATIONSHIP_INCREASE Regina 0.08

@TITLE - set the current event title
@TITLE <name>

@DESCRIPTION - set the current description event
@DESCRIPTION <description>

@RESET - set the selected resource value to zero
@RESET SPAREPARTS

@GAMEOVER - End the game and set its ending State
@GAMEOVER <EndingSceneNameString>

@ANOTHER_EVENT - run another event after ending the current event immediately
@ANOTHER_EVENT <ID_onlyOfSelectedEvent>

@CRITICAL - Add critical event for next cycle that ignore event limit and on 
high priority : @CRITICAL <Name of CriticalEvent>


"
autowrap_mode = 2

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 471.0
offset_top = 550.0
offset_right = 695.0
offset_bottom = 802.0
theme_override_font_sizes/font_size = 10
text = "Conditions
HAS - Check  if it beholds that item
eg. HAS SPAREPARTS, if it has equal or 
more than 1 spareparts

PLACE - Faction eg PLACE Asteroid

CRITICAL -Turn this event into critical, 
check if this event has queue on Critical
list, if it is on the list, it will given the 
highest priority event to show first ignoring
Event limits per cycle

FOLLOW-UP - Similar to CRITICAL but it follows
event limit rule per cycle
"

[node name="Control" type="Control" parent="Label"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OtherSubComponents" type="Panel" parent="."]
layout_mode = 0
offset_left = 920.0
offset_top = 593.0
offset_right = 1825.0
offset_bottom = 968.0

[node name="ScrollContainer" type="ScrollContainer" parent="OtherSubComponents"]
layout_mode = 0
offset_right = 904.0
offset_bottom = 363.0

[node name="VBoxContainer" type="VBoxContainer" parent="OtherSubComponents/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="_Command_Module" parent="OtherSubComponents/ScrollContainer/VBoxContainer" instance=ExtResource("2_5gxj8")]
layout_mode = 2

[node name="Conditions_Components" type="Control" parent="OtherSubComponents/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 275)
layout_mode = 2
script = ExtResource("3_r1le8")

[node name="Panel" type="Panel" parent="OtherSubComponents/ScrollContainer/VBoxContainer/Conditions_Components"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o4u1n")

[node name="Conditional_OptionButton" type="OptionButton" parent="OtherSubComponents/ScrollContainer/VBoxContainer/Conditions_Components/Panel"]
layout_mode = 0
offset_left = 7.0
offset_top = 30.0
offset_right = 367.0
offset_bottom = 67.0
scale = Vector2(0.580556, 0.872727)
selected = 0
item_count = 15
popup/item_0/text = "HAS"
popup/item_1/text = "PLACE"
popup/item_1/id = 1
popup/item_2/text = "RELATIONSHIP_MAX_WITH_ME"
popup/item_2/id = 2
popup/item_3/text = "RELATIONSHIP_HIGH_75%_WITH_ME"
popup/item_3/id = 3
popup/item_4/text = "RELATIONSHIP_LOWER_25%_WITH_ME"
popup/item_4/id = 5
popup/item_5/text = "RELATIONSHIP_LOWER_0%_WITH_ME"
popup/item_5/id = 5
popup/item_6/text = "SANITY_100%"
popup/item_6/id = 6
popup/item_7/text = "SANITY_75%"
popup/item_7/id = 7
popup/item_8/text = "SANITY_25%"
popup/item_8/id = 8
popup/item_9/text = "SANITY_0%"
popup/item_9/id = 9
popup/item_10/text = "HAS_INGAME_EFFECTS"
popup/item_10/id = 10
popup/item_11/text = "HAS_UNIQUE_ITEM"
popup/item_11/id = 11
popup/item_12/text = "CRITICAL"
popup/item_12/id = 12
popup/item_13/text = "FOLLOW-UP"
popup/item_13/id = 13
popup/item_14/text = "CYCLE"
popup/item_14/id = 14

[node name="Label_Condition" type="Label" parent="OtherSubComponents/ScrollContainer/VBoxContainer/Conditions_Components/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Conditions
"

[node name="Condition_Value_LineText" type="LineEdit" parent="OtherSubComponents/ScrollContainer/VBoxContainer/Conditions_Components/Panel"]
layout_mode = 0
offset_left = 7.0
offset_top = 68.0
offset_right = 216.0
offset_bottom = 99.0
placeholder_text = "Value"

[node name="_UseCondition_CheckButton" type="CheckButton" parent="OtherSubComponents/ScrollContainer/VBoxContainer/Conditions_Components/Panel"]
layout_mode = 0
offset_left = 617.0
offset_top = 3.0
offset_right = 790.0
offset_bottom = 34.0
text = "USE CONDITION"

[node name="_Probability_Module" parent="OtherSubComponents/ScrollContainer/VBoxContainer" instance=ExtResource("3_q1j43")]
layout_mode = 2

[node name="Viewing" type="Control" parent="."]
anchors_preset = 0
offset_left = 32.0
offset_top = 107.0
offset_right = 886.0
offset_bottom = 716.0
script = ExtResource("5_ppsfg")

[node name="ScrollContainer" type="ScrollContainer" parent="Viewing"]
layout_mode = 0
offset_right = 858.0
offset_bottom = 916.0

[node name="VBoxContainer" type="VBoxContainer" parent="Viewing/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Button_AddEvent" to="." method="add_new_event"]
[connection signal="button_up" from="Button_Clear" to="." method="_on_button_clear_button_up"]
[connection signal="button_up" from="Create_ChoiceButton/Button_AddChoiceButton" to="." method="_on_button_add_choice_button_button_up"]
[connection signal="button_up" from="Create_ChoiceButton/Button_AddChoiceButton2" to="." method="_on_button_add_choice_button_2_button_up"]
[connection signal="toggled" from="OtherSubComponents/ScrollContainer/VBoxContainer/Conditions_Components/Panel/_UseCondition_CheckButton" to="OtherSubComponents/ScrollContainer/VBoxContainer/Conditions_Components" method="_on__use_condition_check_button_toggled"]
